styles/newprojects.css
/* ... */
@media (max-width : 600px){
    .right_heading {
        font-family: manrope-semi-bold;
        font-size: 23px;
        line-height: 40px;
    }
    .right_content{
        font-size: 15px;
    }
    .logo {
        margin-bottom: 15px;
        margin-top: 15px;
    }
    .section.-second {
        margin-top: 70px;
    }
}
@media (max-width : 500px){
    .right_heading {
        font-family: manrope-semi-bold;
        font-size: 19px;
        line-height: 35px;
    }
    .logo img {
        height: 120px;
    }
    .right_heading{
        margin-bottom: 15px;
    }
    .section.-second{
        padding-left: 30px;
        padding-right: 30px
    }
    
}
@media (max-width : 400px){
    .right_heading {
        font-family: manrope-semi-bold;
        font-size: 20px;
        line-height: 30px;
    }
    .right_content{
        font-size: 15px;
        line-height: 28px;
    }
    .left_heading__text__line {
        width: 70px;
    }
}

/* second section styles */

/* third section styles */
.section.-third{
    margin-top: 100px;
}
.third-section-wrapper{
    display: flex;
    justify-content: flex-end;
}
.half_video{
    width: 746px;
    height: 444px;
    /* background: black; */
}
.half_video .img{
    width: 100%;
    object-fit: cover;
}
/* third section queries */
@media (max-width : 1250px){
    .third-section-wrapper{
        justify-content: flex-start;
        padding-left: 150px;
    }
}
@media (max-width : 1000px){
    .third-section-wrapper{
        padding-left: 50px;
        padding-right: 50px;
    }
    .half_video {
        height: 300px;
    }
}
@media (max-width : 600px){
    .section.-third {
        margin-top: 70px;
    }
}

@media (max-width : 500px){
    .section.-third{
        padding-left: 30px;
        padding-right: 30px
    }
    .third-section-wrapper {
        padding-left: 0px;
        padding-right: 0px;
    }
}

/* third section queries */

/* third section styles */


/* fourth section styles */
.section.-fourth{
    margin-top: 150px;
    padding-left:150px;
    padding-right:160px;
}
.divider{
    height: 30px;
    width: 100%;
}

/* media queries  */
@media (max-width : 1250px){
    .section.-fourth{
        margin-top: 150px;
    }
}
@media (max-width : 1000px){
    .section.-fourth{
        padding-left:50px;
        padding-right:50px;
    }
    .divider{
        display: none;
    }
}
@media (max-width : 600px){
    .section.-fourth{
        margin-top: 70px;
    }
}
@media (max-width : 500px){
    .section.-fourth{
        padding-left: 30px;
        padding-right: 30px
    }
}
/* media queries  */

/* fourth section styles */

/* fifth section styles */
.section.-fifth{
    margin-top: 150px;
}
.full_video{
    height: 766px;
    background: black;
}

@media (max-width : 700px){
    .full_video{
        height: 500px;
    }
    .section.-fifth{
        margin-top: 70px;
    }
}
/* fifth section styles */

/* sixth section styles */
.section.-sixth{
    margin-top: 57px;
    padding-left: 150px;
    padding-right: 150px;
}

.sixth-section-wrapper{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
.group{
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
}
.group.--column{
    flex-direction: column;
}
.image{
    background: black;
    margin: 5px;
}
.image img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}
.image.--half{
    width: calc(50vw - 168px);
    height: 495px;
}
.image.--long{
    height: calc(495px * 2 + 10px);
}
.image.--full{
    width: calc(100vw - 325px)/*1141px*/;
    min-height: 495px;
}
.image.--full img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}
/* .group .image.--half:first-of-type {
    margin-left: 0px ;
}
.group .image.--half:nth-of-type(2) {
    margin-right: 0px ;
} */

@media (max-width : 1450px){
    .image.--half{
        width: calc(100vw / 2 - 159.998px);
        height: 395px;
    }
    .image.--full{
        width: calc(100vw - 300px);
    }
    .group {
        justify-content: center;
    }
}

@media (max-width : 1000px){
    .section.-sixth{
        padding-left: 50px;
        padding-right: 50px;
    }
    .image.--half{
        width: calc(100vw / 2 - 59.998px);
        height: 395px;
    }
    .image.--full{
        width: calc(100vw - 100px);
    }
}

@media (max-width : 700px){
    .section.-sixth{
        margin-top: 42px;
    } 
    .sixth-section-wrapper {
        flex-direction: column;
        align-items: center;
    }
    .group{
        flex-direction: column;
    }
    .image.--half{
        width: calc(100vw - 100px);
        height: 395px;
    }
    .image.--full{
        width: calc(100vw - 100px);
        height: 395px;

    }
}

@media (max-width : 500px){
    .image.--half {
        margin: 5px 0;
    }

    .section.-sixth{
        padding-left: 30px;
        padding-right: 30px
    }
    .image.--half{
        width: calc(100vw - 60px);
        height: 250px;
    }
    .image.--full{
        width: calc(100vw - 60px);
        height: 250px;

    }
}
/* sixth section styles */

/* seventh section styles */
.section.-seventh{
    margin-top: 216px;
    padding-left: 150px;
    padding-right: 150px;
}

@media (max-width : 1000px){
    .section.-seventh{
        padding-left: 50px;
        padding-right: 50px;
    }
}
@media (max-width : 500px){
    .section.-seventh{
        padding-left: 30px;
        padding-right: 30px;
        margin-top:70px;
    }
}
/* seventh section styles */

/* eight section styles */
.section.-eight{
    margin-top: 216px;
    display: flex;
    justify-content: center;
    margin-bottom: 287px;
}
.eight-section-wrapper{
    /* max-width: 1005px; */
    width: calc(100vw - 350px);
}
.slick-prev, .slick-next {
    top: calc(50% - 40px);
}
.slick-prev {
    left: -100px;
}
.slick-next {
    right: -100px;
}
.slick-list {
    max-width: 1005px;
}
.carousel.slick-initialized.slick-slider {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
/* ... */

